<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_night">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pie_chart">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="Data provided by: "
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llTotalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llInfected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/infected"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_infected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/fetch"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDeath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/death"
                        android:textAlignment="center"
                        android:textColor="#FF0000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/fetch"
                        android:textAlignment="center"
                        android:textColor="#FF0000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/recovered"
                        android:textAlignment="center"
                        android:textColor="#20BE25"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/fetch"
                        android:textAlignment="center"
                        android:textColor="#20BE25"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.github.mikephil.charting.charts.PieChart>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_info" />


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="1000dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_chart" />
    </LinearLayout>
</ScrollView>
